analyzer/tests/snapshots/analysis__case_098_while_loop_with_break_2.snap
---
source: analyzer/tests/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/while_loop_with_break_2.fe:3:21
  │
3 │         val: u256 = 0
  │                     ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:4:15
  │
4 │         while val < 2:
  │               ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:4:21
  │
4 │         while val < 2:
  │                     ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:4:15
  │
4 │         while val < 2:
  │               ^^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:5:13
  │
5 │             val = val + 1
  │             ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:5:19
  │
5 │             val = val + 1
  │                   ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:5:25
  │
5 │             val = val + 1
  │                         ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:5:19
  │
5 │             val = val + 1
  │                   ^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:6:16
  │
6 │             if val == 1:
  │                ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:6:23
  │
6 │             if val == 1:
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:6:16
  │
6 │             if val == 1:
  │                ^^^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:8:16
  │
8 │         return val
  │                ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:2:5
  │  
2 │ ╭     pub def bar() -> u256:
3 │ │         val: u256 = 0
4 │ │         while val < 2:
5 │ │             val = val + 1
6 │ │             if val == 1:
7 │ │                 break
8 │ │         return val
  │ ╰──────────────────^ attributes hash: 2041944711719443549
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:3:9
  │
3 │         val: u256 = 0
  │         ^^^^^^^^^^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop_with_break_2.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar() -> u256:
3 │ │         val: u256 = 0
4 │ │         while val < 2:
  · │
7 │ │                 break
8 │ │         return val
  │ ╰──────────────────^ attributes hash: 16417315723405128961
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/while_loop_with_break_2.fe:2:22
  │
2 │     pub def bar() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/while_loop_with_break_2.fe:3:14
  │
3 │         val: u256 = 0
  │              ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


